fixed style z-index

--- a/public/style/less/components/background.less
+++ b/public/style/less/components/background.less
@@ -8,7 +8,6 @@
 
     width: 600px;
     height: 200px;
-    z-index: 1;
 
     top: 0;
     left: 0;
