--- a/public/style/less/components/header.less
+++ b/public/style/less/components/header.less
@@ -9,7 +9,7 @@
 
   width: 100%;
   height: 50px;
-  z-index: 5;
+  z-index: 10;
   line-height: 47px;
 
   background-color: #77C4DB;
