--- a/public/style/less/components/incident.less
+++ b/public/style/less/components/incident.less
@@ -8,6 +8,7 @@
   padding: 50px 0;
   margin: 0 auto;
   position: relative;
+  z-index: 5;
   background: #E4F3F8;
 
   .header {
