--- a/public/style/less/components/timeline.less
+++ b/public/style/less/components/timeline.less
@@ -6,6 +6,7 @@
   padding: 80px 0 50px 0;
   margin: 0px auto;
   position: relative;
+  z-index: 5;
   background: #E4F3F8;
 
   .timeline {
